# QuAcK

./: .gitignore  .gitmodules  GoDuck  GoHu  GoInt  GoQCaml  GoSph  GoXC  INSTALL.md  INSTALL.txt  Makefile  PyDuck  PyDuck.py  PyOptions.json  README.md  configure  extract.sh  extract_sph.sh  quack.rc  run_sph.sh  scan_Be2.sh  scan_H2.sh  scan_LiF.sh  scan_LiH.sh  scan_N2.sh  scan_w.sh
basis/: .gitignore  6-31g  Hu  README.md  aug-cc-pvtz  aug-cc-pvtz+3s3p3d_C2H4  aug-cc-pvtz+3s3p3d_CO  aug-cc-pvtz+3s3p3d_N2  cc-pvdz  def2-tzvp  def2-tzvpp  install.py
basis_cap/: install.py
cap_data/: C2H2X  C2H4X  C4H6X  CH2OX  CO  CO2X  H2  He  N2  N2X
cap_integrals/: aug-cc-pvtz+3s3p3d_C2H2  aug-cc-pvtz+3s3p3d_C2H4  aug-cc-pvtz+3s3p3d_CO  sto-3g_N2
cap_onsets/: COX  N2X
config/: env.sh
crhf_test/: cRHF.py  generate_random_cap_dat.py  matrix_test  methods.default  methods.test  options.test  run_test.sh  test_diagonalization.py
examples/: auxbasis.Be.VDZ-F12_OPTRI  auxbasis.Be.VDZ-RI  auxbasis.Be.VTZ-F12_OPTRI  auxbasis.H2.AVDZ_OPTRI  auxbasis.H2.AVTZ_OPTRI  auxbasis.H2.VDZ-RI  auxbasis.H2.VTZ-RI  auxbasis.H2.VTZ_OPTRI  auxbasis.He.AVDZ-RI  auxbasis.He.AVDZ_OPTRI  auxbasis.He.AVTZ-RI  auxbasis.He.AVTZ_OPTRI  auxbasis.He.VDZ-RI  auxbasis.He.VTZ-RI  basis.B+.VDZ  basis.B+.VTZ  basis.B.cc-pvdz  basis.BF.cc-pvdz  basis.BF.cc-pvqz  basis.BF.cc-pvtz  basis.BH.STO-3G  basis.BH.cc-pvqz  basis.BH2.aug-cc-pvtz  basis.BN.6-31Gs  basis.BN.def2-TZVPP  basis.Be++.aug-cc-pvtz  (+263 more)
qcaml-tools/: .gitignore  GoDuck  GoDuck.ml  Makefile  dune  dune-project  quack_input.ml  quack_integrals.ml
(+2829 files in other folders)
